# AegisAPI

backend/: .gitignore  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: router.py
backend/app/config/: __init__.py  settings.py
backend/app/core/: __init__.py  constants.py  exceptions.py  logging.py
backend/app/db/: __init__.py  session.py
backend/app/db/repositories/: __init__.py  api_specification.py  authentication_profile.py  base.py  endpoint.py  evidence.py  finding.py  payload.py  report.py  scan.py
backend/app/models/: __init__.py  api_specification.py  authentication_profile.py  base.py  endpoint.py  evidence.py  finding.py  payload.py  project.py  report.py  scan.py  user.py
backend/app/parsers/: __init__.py
backend/app/parsers/graphql/: __init__.py  argument_mapper.py  operation_extractor.py  parser.py  schema_introspector.py
backend/app/parsers/openapi/: __init__.py  parser.py  path_extractor.py  schema_resolver.py  security_extractor.py
backend/app/schemas/: __init__.py  advisory.py  api_specification.py  auth.py  cloud.py  common.py  endpoint.py  evidence.py  finding.py  payload.py  report.py  risk.py  scan.py
backend/app/services/: __init__.py
backend/app/services/advisory/: __init__.py  advisor.py
backend/app/services/ai_engine/: __init__.py  context_builder.py  engine.py  llm_client.py  payload_generator.py  payload_validator.py  (+2 more)
backend/app/utils/: crypto.py  files.py  http.py
backend/tests/: __init__.py  conftest.py
backend/tests/fixtures/: .gitkeep
(+126 files in other folders)
